--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+div {
+  font-size: 200%;
+}
+</style>
+</head>
 <body>
-
+<div>
 <h2>Rule of 72 Calculator</h2>
 
 <p>Calculate how much time it will take your original investment to double based on the interest rate.</p>
@@ -17,6 +24,6 @@ var z = x / y;
 document.getElementById("Result").innerHTML = "Based on a " + y +"% interest rate, your money will double in <b>" + z +" years</b>.";
 }
 </script>
-
+</div>
 </body>
 </html>
