--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <style>
 div {
-  font-size: 175%;
+  font-size: 150%;
 }
 </style>
 </head>
 <body>
 <div>
 <h2>Rule of 72 Calculator</h2>
-<p>Calculate how much time it will take your original investment to double based on the interest rate.</p><br />
+<p>Calculate how much time it will take your original investment to double based on the interest rate.</p>
 <input type="text" id="rate">% <br />
 <button onclick="calc()">Calculate!</button>
 <p id="Result"></p>
