--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div {
 <body>
 <div>
 <h2>Rule of 72 Calculator</h2>
-<p>Calculate how much time it will take your original investment to double based on the interest rate.</p><br />
+<p>Calculate how much time it will take your original investment to double based on the interest rate.</p>
 <p>Interest Rate:</p>
 <input type="text" id="rate">% <br />
 <button onclick="calc()">Calculate!</button>
