--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ div {
 <h2>Rule of 72 Calculator</h2>
 <p>Calculate how much time it will take your original investment to double based on the interest rate.</p>
   <br  />
-<p>Interest Rate:</p><input type="text" id="rate">% <br />
+<p>Interest Rate:</p>
+<input type="text" id="rate">% <br />
 <button onclick="calc()">Calculate!</button>
 <p id="Result"></p>
 
