--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ div {
 <div>
 <h2>Rule of 72 Calculator</h2>
 <p>Calculate how much time it will take your original investment to double based on the interest rate.</p>
-  <br  />
-<p>Interest Rate:</p>
-<input type="text" id="rate">% <br />
+<input type="text" id="rate" placeholder="Interest Rate">% <br />
 <button onclick="calc()">Calculate!</button>
 <p id="Result"></p>
 
